Ultimo Commit 25/06/2024 Actualizaciones en Formatos para celdas numericas en JTables *Modificaciones en GestionCeldas tipo("numericos") *Modificaciones en funciones de formateos numericos en util.Tools *Modificaciones en fillView y setTotalRow y setTotalGral en vista para formatos numericos.
Nuevos Archivos
*wTalonarios, wVendedores, wClientes, wTipoDocumentos
*wVentas y otros relacionados.

Modificaciones en wPrecios.

Tambien se esta trabajando en Triggers para vistas con tabla

--- a/src/main/java/com/genesis/vistas/wCiudad.form
+++ b/src/main/java/com/genesis/vistas/wCiudad.form
@@ -35,7 +35,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="jcbDepartamento" max="32767" attributes="0"/>
-                  <Component id="tf_id" pref="195" max="32767" attributes="0"/>
+                  <Component id="jtfId" pref="195" max="32767" attributes="0"/>
                   <Component id="tf_nombre" pref="195" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -47,7 +47,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="tf_id" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jtfId" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblId" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="10" max="32767" attributes="0"/>
@@ -66,13 +66,13 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JTextField" name="tf_id">
+    <Component class="javax.swing.JTextField" name="jtfId">
       <Properties>
         <Property name="text" type="java.lang.String" value="0"/>
       </Properties>
       <Events>
-        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="tf_idFocusGained"/>
-        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tf_idKeyPressed"/>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jtfIdFocusGained"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfIdKeyPressed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="tf_nombre">
